test/good/lambdas/lambda08.px

func f(n: Int, g: Int->Int): Int def
    return g(n)

print f(4, _).toString() * 2
