test/bad/functions/lambda07.px

func f(Int,Int->Char g) def
    return

f(_*_)
